Fix calc-btns not stretching to the intended height properly

--- a/styles.css
+++ b/styles.css
@@ -24,7 +24,7 @@
     grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
     gap: 12px;
 
-    height: inherit;
+    height: 100%;
 }
 
 .calc-display{
